# market-pulse

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
adapters/claude-command/: README.md
adapters/claude-command/mp/: COMMAND.md
adapters/codex-skill/: README.md  SKILL.md
adapters/codex-skill/aliases/mp-ask/: SKILL.md
adapters/codex-skill/aliases/mp-calendar/: SKILL.md
adapters/codex-skill/aliases/mp-find/: SKILL.md
adapters/codex-skill/aliases/mp-now/: SKILL.md
adapters/codex-skill/aliases/mp-regime/: SKILL.md
adapters/codex-skill/aliases/mp-research/: SKILL.md
adapters/codex-skill/aliases/mp-review/: SKILL.md
adapters/codex-skill/aliases/mp-think/: SKILL.md
adapters/codex-skill/aliases/mp-week/: SKILL.md
adapters/earnings-command/: README.md  fixture-jsonl  yahoo-jsonl
adapters/search-command/: README.md  brave-jsonl  fixture-jsonl
adapters/search-command/fixtures/: brave-web-search.json
docs/: architecture.md  mvp.md  vision.md
market_pulse/: __init__.py  cli.py  feedback.py  journal.py  models.py  pulse.py  render.py  review.py
src/: lib.rs
tests/: test_feedback.py  test_journal_review.py  test_pulse.py
