[package]
name = "market-pulse"
version = "0.1.0"
edition = "2021"
description = "CLI-first market inquiry companion for market questions, context, feedback, and review."
license = "MIT"
authors = ["minislively"]
repository = "https://github.com/minislively/market-pulse"
keywords = ["cli", "markets", "finance", "inquiry", "learning"]
categories = ["command-line-utilities"]
