[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "market-pulse"
version = "0.1.0"
description = "CLI-first market thinking journal for short market context, user reflection, and review."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "minislively" }]
keywords = ["cli", "markets", "finance", "journal", "learning"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.scripts]
mp = "market_pulse.cli:main"
market-pulse = "market_pulse.cli:main"

[tool.setuptools.packages.find]
include = ["market_pulse*"]
